--- a/pages/MemberInfo/myOrder/myOrder.wxml
+++ b/pages/MemberInfo/myOrder/myOrder.wxml
@@ -1,35 +1,35 @@
 <!--myOrder.wxml-->
 <view class="body">
   <view class="my-order">
-    <view class="weui-arrow-right weui-flex my-order-list">
+    <view class="weui-flex my-order-list">
       <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
         <text class="my-order-list-ex-title">待付款</text>
         <text class="my-order-list-ex-p">我是带付款我是带付款我是带付款</text>
       </view>
     </view>
-    <view class="weui-arrow-right weui-flex my-order-list">
+    <view class="weui-flex my-order-list">
       <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
         <text class="my-order-list-ex-title">待发货</text>
         <text class="my-order-list-ex-p">我是待发货我是待发货我是待发货</text>
       </view>
     </view>
-    <view class="weui-arrow-right weui-flex my-order-list">
+    <view class="weui-flex my-order-list">
       <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
         <text class="my-order-list-ex-title">已发货</text>
         <text class="my-order-list-ex-p">我是已发货我是已发货我是已发货</text>
       </view>
     </view>
-    <view class="weui-arrow-right weui-flex my-order-list">
+    <view class="weui-flex my-order-list">
       <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
         <text class="my-order-list-ex-title">已完成</text>
         <text class="my-order-list-ex-p">我是已完成我是已完成我是已完成</text>
       </view>
     </view>
-    <view class="weui-arrow-right weui-flex my-order-list">
+    <view class="weui-flex my-order-list">
       <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
         <text class="my-order-list-ex-title">已取消</text>
