--- a/template/business/business.wxss
+++ b/template/business/business.wxss
@@ -29,10 +29,14 @@
 
 }
 .business-item-btn{
-  line-height:2;
-  font-size: 15px;
   padding:0px;
   margin: 0px; 
-  background-color: #148A96;
-  color: #ffffff;
+  background-image: url('/images/addressMap.png');
+  background-repeat: no-repeat;
+  line-height:2;
+  font-size:15px;
+  padding-left:25px;
+  background-size:18px;
+  background-position:left 5px;
+  color:#E51C23;
 }
