--- a/template/product/product.wxml
+++ b/template/product/product.wxml
@@ -5,8 +5,9 @@
       <image class="saleProduct-img" src="{{pic}}" background-size="cover"></image>  
       <view class="saleProduct-Mesg weui-flex">
           <view class="saleProduct-Name weui-flex__item">
-              <text class="saleProduct-Name-title ellipsis">{{title}}</text>
-              <text class="saleProduct-Name-label">{{label}}</text>
+          {{title}}
+              <!-- <text class="saleProduct-Name-title ellipsis">{{title}}</text> -->
+              <!-- <text class="saleProduct-Name-label">{{label}}</text> -->
           </view>
           <view class="saleProduct-Price">
              <text class="saleProduct-Price-current">¥{{currentPrice}}</text>
