--- a/template/business/business.wxss
+++ b/template/business/business.wxss
@@ -31,7 +31,7 @@
 .business-item-btn{
   padding:0px;
   margin: 0px; 
-  background-image: url('/images/addressMap.png');
+  background-image: url('https://loupan.b0.upaiyun.com/1/ueditor/201709102147539338897.png');
   background-repeat: no-repeat;
   line-height:2;
   font-size:15px;
