--- a/pages/Member/Member.wxss
+++ b/pages/Member/Member.wxss
@@ -65,8 +65,8 @@ button[type="default"] {
   -webkit-box-sizing:border-box;
 }
 .m-fot__item image{
-  width: 60px;
-  height: 60px;
+  width: 120rpx;
+  height: 120rpx;
 }
 .m-fot__item text{
   display: block;
