--- a/pages/searchList/searchList.wxss
+++ b/pages/searchList/searchList.wxss
@@ -54,6 +54,7 @@ page{height: 100%}
   color:#999;
   margin-left:5px; 
   font-size: 13px;
+  text-decoration:line-through;
 }
 .buynumber{
   color:#999;
