--- a/pages/shoppingCar/shoppingCar.wxml
+++ b/pages/shoppingCar/shoppingCar.wxml
@@ -3,7 +3,8 @@
   <view class="cart-box">
     <view class="item weui-flex" wx:for="{{list}}" wx:key="list">
       <icon type="{{item.select}}" size="20" color='#E51C23' data-index="{{index}}" data-select="{{item.select}}" bindtap="change"/>
-      <image src="{{item.url}}" class="goods-img" mode="widthFix"></image>
+      <!-- <view class="goods-img"></view>   -->
+       <image src="{{item.url}}" class="goods-img"></image> 
       <view class="weui-flex__item weui-flex-column goods-info">
         <view class='ellipsis  weui-flex-column__item'>{{item.name}}</view>
         <view class='weui-flex-column__item'>
