--- a/pages/Member/Member.wxml
+++ b/pages/Member/Member.wxml
@@ -3,7 +3,7 @@
   <view class="member-top">
     <view class="m-top-user weui-flex">
       <view class="m-top-user-img"><image  src="/images/vip.png"></image></view>
-      <view class="weui-flex__item weui-flex" style="padding-top:20rpx;">
+      <view class="weui-flex__item weui-flex" style="padding-top:20rpx;" wx:if="{{showInfo}}">
         <view class="m-top-userInfo weui-flex__item">
           <view class="m-top-username">昵称：****</view>
           <view class="m-top-card">ID：123456</view>
@@ -12,56 +12,42 @@
       </view>
     </view>
     <view class="weui-flex m-top-bar">
-      <navigator class="weui-flex__item" url="/pages/MemberInfo/myMember/myMember">
-        <view class="m-top-b">
-          <text>我的会员</text>
-          <text>80人</text>
-        </view>      
-      </navigator>
-      <navigator class="weui-flex__item weui_left" url="/pages/MemberInfo/accountBalance/accoundBalance">
-        <view class="m-top-b">
-          <text>账户余额</text>
-          <text>¥1122</text>
-        </view>
-      </navigator>
-      <navigator class="weui-flex__item weui_left" url="">
-        <view class="m-top-b">
-          <text>可用积分</text>
-          <text>998</text>
-        </view>
-      </navigator>
+      <view class="weui-flex__item m-top-b" data-url='/pages/MemberInfo/myMember/myMember' bindtap='navigaToUrl'>
+        <text>我的会员</text>
+        <text>{{memberNumber}}人</text>
+      </view>
+      <view class="weui-flex__item m-top-b" data-url='/pages/MemberInfo/accountBalance/accoundBalance' bindtap='navigaToUrl'>
+        <text>账户余额</text>
+        <text>¥{{accountBalance}}</text>
+      </view>
+      <view class="weui-flex__item m-top-b">
+        <text>可用积分</text>
+        <text>{{availableIntegral}}</text>
+      </view>
     </view>
   </view>
   <view class="member-fot">
     <view class="weui-flex m-fot">
-      <view class="m-fot__item">
-        <navigator url="/pages/MemberInfo/signIn/signIn">
-          <image src="/images/qiandao.png"></image>
-          <text>每日签到</text>
-        </navigator>
+      <view class="m-fot__item" data-url="/pages/MemberInfo/signIn/signIn" bindtap='navigaToUrl'>
+        <image src="/images/qiandao.png"></image>
+        <text>每日签到</text>
       </view>
-      <view class="m-fot__item weui_left">
-        <navigator url="/pages/MemberInfo/myOrder/myOrder">
-          <image src="/images/wodedingdan.png"></image>
-          <text>我的订单</text>
-        </navigator>
+      <view class="m-fot__item weui_left" data-url="/pages/MemberInfo/myOrder/myOrder" bindtap='navigaToUrl'>
+        <image src="/images/wodedingdan.png"></image>
+        <text>我的订单</text>
       </view>
-      <view class="m-fot__item weui_left">
-        <navigator url="/pages/MemberInfo/applicationWithdrawal/applicationWithdrawal">
-          <image src="/images/tixian.png"></image>
-          <text>提现申请</text>
-        </navigator>
+      <view class="m-fot__item weui_left" data-url="/pages/MemberInfo/applicationWithdrawal/applicationWithdrawal" bindtap='navigaToUrl'>
+        <image src="/images/tixian.png"></image>
+        <text>提现申请</text>
       </view>
       <view class="m-fot__item weui_top">
         <image src="/images/tuiguangma.png"></image>
         <text>推广码</text>
         <button type="default" class="share-but" open-type="share">分享</button>
       </view>
-      <view class="m-fot__item weui_left weui_top">
-        <navigator url="/pages/MemberInfo/accountManagement/accountManagement">
-          <image src="/images/gerenshezhi.png"></image>
-          <text>账户管理</text>
-        </navigator>
+      <view class="m-fot__item weui_left weui_top" data-url="/pages/MemberInfo/accountManagement/accountManagement" bindtap='navigaToUrl'>
+        <image src="/images/gerenshezhi.png"></image>
+        <text>账户管理</text>
       </view>
       <view class="m-fot__item weui_left weui_top">
         <image src="/images/dazhuanpan.png"></image>
@@ -69,6 +55,5 @@
       </view>
     </view>
   </view>
-  <button type="default" class="m-top-logout">退出登录</button>
-  <button type="default" class="m-top-logout" bindtap='toLogin'>登录</button>
+  <button type="default" class="m-top-logout" wx:if="{{showInfo}}">退出登录</button>
 </view>
