--- a/pages/MemberInfo/myMember/myMember.wxml
+++ b/pages/MemberInfo/myMember/myMember.wxml
@@ -18,28 +18,10 @@
         </view>
         <block wx:for="{{ListItem}}" wx:for-item="item">
           <view class="weui-flex tab-list-liem-list">
-            <view class="weui-flex__item">{{item.ID}}</view>
-            <view class="weui-flex__item">{{item.Name}}</view>
-            <view class="weui-flex__item">{{item.recommendName}}</view>
-            <view class="weui-flex__item">{{item.Time}}</view>
-          </view>
-          <view class="weui-flex tab-list-liem-list">
-            <view class="weui-flex__item">{{item.ID}}</view>
-            <view class="weui-flex__item">{{item.Name}}</view>
-            <view class="weui-flex__item">{{item.recommendName}}</view>
-            <view class="weui-flex__item">{{item.Time}}</view>
-          </view>
-          <view class="weui-flex tab-list-liem-list">
-            <view class="weui-flex__item">{{item.ID}}</view>
-            <view class="weui-flex__item">{{item.Name}}</view>
-            <view class="weui-flex__item">{{item.recommendName}}</view>
-            <view class="weui-flex__item">{{item.Time}}</view>
-          </view>
-          <view class="weui-flex tab-list-liem-list">
-            <view class="weui-flex__item">{{item.ID}}</view>
-            <view class="weui-flex__item">{{item.Name}}</view>
-            <view class="weui-flex__item">{{item.recommendName}}</view>
-            <view class="weui-flex__item">{{item.Time}}</view>
+            <view class="weui-flex__item">{{item.MemberID}}</view>
+            <view class="weui-flex__item">{{item.MemberName}}</view>
+            <view class="weui-flex__item">{{item.UserAccount}}</view>
+            <view class="weui-flex__item">{{item.CreateTime}}</view>
           </view>
         </block>
       </view>
