--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,18 +1,14 @@
  <import src="../../template/product/product.wxml" /> 
  <import src="../../template/loadmore_line/loadmore_line.wxml" /> 
 <!--home.wxml-->
-<!-- <scroll-view id="scrollView" 
-            scroll-y="true" 
-            bindscrolltolower="searchScrollLower" 
-            enable-back-to-top="true" 
-            bindscroll="scroll"
-            scroll-with-animation="true"> -->
   <view class="body">
     <view class="swiper">
       <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-        <block wx:for="{{imgUrls}}">
+        <block wx:for="{{imgUrls}}" wx:for-item="item">
           <swiper-item>
-            <image src="{{item}}" class="slide-image" width="100%" height="150"/>
+            <navigator url="/pages/details/details?id={{item.ad_id}}">
+              <image src="{{item.img_url}}" class="slide-image" width="100%" height="150"/>
+            </navigator>
           </swiper-item>
         </block>
       </swiper>
@@ -87,7 +83,6 @@
       </view>
     </view>
   </view> 
-<!-- </scroll-view> -->
 
 
 
