--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -24,7 +24,7 @@
               <!-- 减号 -->  
               <text class="{{minusStatus}}" bindtap="bindMinus">-</text>  
               <!-- 数值 -->  
-              <input type="number" disabled="true" bindchange="bindManual" value="{{num}}" />  
+              <input type="number" disabled="true" bindchange="bindManual" value="{{organiObj.saleNum}}" />  
               <!-- 加号 -->  
               <text class="normal" bindtap="bindPlus">+</text>  
           </view>
