--- a/pages/searchList/searchList.wxml
+++ b/pages/searchList/searchList.wxml
@@ -14,14 +14,14 @@
     <view class="search weui_top">
       <view class='fixed'>
         <view class="searchBar weui-flex weui_bottom {{fixed?'fixed-start':''}}">
-          <text class='on weui-flex__item'>综合</text>
-          <text class='weui-flex__item'>销量</text>
-          <text class='weui-flex__item'>价格</text>
+          <text class="weui-flex__item {{tabbars1?'on':' '}}" bindtap="tabbars1Fn">综合</text>
+          <text class="weui-flex__item {{tabbars2?'on':' '}}" bindtap="tabbars2Fn">销量</text>
+          <text class="weui-flex__item {{tabbars3?'on':' '}}" bindtap="tabbars3Fn">价格</text>
         </view>
       </view>
       <view class="searchList">
         <block wx:for="{{searchList}}" wx:for-item="item">
-          <navigator url='{{item.id}}' class='navtor-list'>
+          <navigator url='/pages/details/details?id={{item.id}}' class='navtor-list'>
             <view class='navtor-item weui-flex'>
               <view style='font-size:0;'>
                 <image class='navitor-item-pic' src='{{item.thumb}}'></image>
